[package]
name = "disturb_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disturb_shared = { path = "../disturb_shared" }
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
turbulence = "0.3"
bevy_networking_turbulence = { version = "0.3.0", default-features = false, features = ["use-webrtc"] }
bevy = { version = "0.5.0", default-features = false }
log = "0.4.14"
simple_logger = "1"